--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FindShelters">
-        <activity android:name=".FindLifeGuard"></activity>
+        <activity android:name=".GitTest"></activity>
+        <activity android:name=".FindLifeGuard" />
         <activity android:name=".FindFood" />
         <activity android:name=".PanicButtonAction" />
         <activity android:name=".FindHospital" />
