update FindFood, FindHospital, FindShelter classes now when the marker is clicked it open a new activity_display_info.xml where the info is displayed. Imported new libraries. Create new activity_display_info.xml.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".FindBcHousing" />
         <activity android:name=".FindShelter" />
         <activity android:name=".Navigation" />
+        <activity android:name=".DisplayInfoActivity" />
         <activity android:name=".SignIn" android:label="@string/btnSign"/>
         <activity android:name=".Login" android:label="@string/btnLogin"/>
         <activity android:name=".StartScreen">
