added files for weather notification page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.AllForOne">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -20,21 +20,31 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FindShelters">
-        <activity android:name=".LifeGuard" android:label="@string/txtLifeGuardTitle"/>
-        <activity android:name=".FindFood" android:label="Find Food"/>
+        android:theme="@style/Theme.FindShelters"
+        android:usesCleartextTraffic="true">
+
+        <activity
+            android:name=".LifeGuard"
+            android:label="@string/txtLifeGuardTitle" />
+        <activity
+            android:name=".FindFood"
+            android:label="Find Food" />
         <activity android:name=".PanicButtonAction" />
         <activity android:name=".FindHospital" />
         <activity android:name=".FindBcHousing" />
         <activity android:name=".FindShelter" />
         <activity android:name=".Navigation" />
         <activity android:name=".DisplayInfoActivity" />
-        <activity android:name=".SignIn" android:label="@string/btnSign"/>
-        <activity android:name=".Login" android:label="@string/btnLogin"/>
+        <activity
+            android:name=".SignIn"
+            android:label="@string/btnSign" />
+        <activity
+            android:name=".Login"
+            android:label="@string/btnLogin" />
+        <activity android:name=".WeatherNotice"/>
         <activity android:name=".StartScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
