update bchousing activity now is embedding bc housing webpage. update activity_display_info.xml minor design details update AndroidManifest.xml add/update titltes update BcHousing.java to display bchousing webpage update MapsActivity.java button "more option" now is opening sign up activity update Navigation.java button bchousing now is working update StartScreen.java button try demo nos is opening MapsActivity.java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,10 +58,10 @@
             android:label="Find Food" />
         <activity android:name=".PanicButtonAction" />
         <activity android:name=".FindHospital" />
-        <activity android:name=".FindBcHousing" />
+        <activity android:name=".BcHousing" android:label="BC Housing Information"/>
         <activity android:name=".FindShelter" />
         <activity android:name=".Navigation" android:label="Main Menu" />
-        <activity android:name=".DisplayInfoActivity"/>
+        <activity android:name=".DisplayInfoActivity" android:label="Information"/>
         <activity
             android:name=".SignIn"
             android:label="@string/btnSign" />
